# ChangeLog for media-video/mplayer
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/mplayer/ChangeLog,v 1.438 2006/12/10 17:07:42 lu_zero Exp $

  10 Dec 2006; Luca Barbato <lu_zero@gentoo.org> mplayer-1.0_rc1.ebuild:
  Fix faac dep

  01 Dec 2006; Steve Dibb <beandog@gentoo.org> mplayer-1.0_rc1.ebuild:
  Disable pvr support

  21 Nov 2006; Luca Barbato <lu_zero@gentoo.org> mplayer-1.0_rc1.ebuild:
  fix the iconv-truetype logic, thanks to hansmi for pointing the issue

  14 Nov 2006; Luca Barbato <lu_zero@gentoo.org> mplayer-1.0_rc1.ebuild:
  Typo, fixed thanks to baru reddy <barureddy@yahoo.com> and zzam, see 
  bug #154504

  07 Nov 2006; Luca Barbato <lu_zero@gentoo.org> mplayer-1.0_rc1.ebuild:
  Improve default config

  06 Nov 2006; Steve Dibb <beandog@gentoo.org>
  files/digest-mplayer-1.0_pre8, files/digest-mplayer-1.0_pre8-r1,
  files/digest-mplayer-1.0_rc1, Manifest:
  Fix Blue skin digest, again, bug #152694

  03 Nov 2006; Patrick McLean <chutzpah@gentoo.org> mplayer-1.0_rc1.ebuild:
  Clean up custom-cflags a bit, add -fomit-frame-pointer as it seems to be
  required to compile some of the inline asm.

  31 Oct 2006; Luca Barbato <lu_zero@gentoo.org> mplayer-1.0_rc1.ebuild:
  Fix some packaging issue part II

  31 Oct 2006; Luca Barbato <lu_zero@gentoo.org>
  -mplayer-1.0_pre20060810.ebuild, -mplayer-1.0_pre20061019.ebuild:
  Cleanup

  31 Oct 2006; Luca Barbato <lu_zero@gentoo.org> mplayer-1.0_pre8.ebuild,
  mplayer-1.0_pre8-r1.ebuild, mplayer-1.0_pre20060810.ebuild,
  mplayer-1.0_pre20061019.ebuild, mplayer-1.0_rc1.ebuild:
  Fix packaging, do not install codecs.conf anymore

  30 Oct 2006; Diego Pettenò <flameeyes@gentoo.org>
  mplayer-1.0_pre8.ebuild, mplayer-1.0_pre8-r1.ebuild,
  mplayer-1.0_pre20060810.ebuild, mplayer-1.0_pre20061019.ebuild,
  mplayer-1.0_rc1.ebuild:
  Add ~x86-fbsd keyword.

  27 Oct 2006; Steve Dibb <beandog@gentoo.org> mplayer-1.0_rc1.ebuild: