@@ -1,9 +1,13 @@
 # ChangeLog for media-video/mplayer
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/mplayer/ChangeLog,v 1.438 2006/12/10 17:07:42 lu_zero Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/mplayer/ChangeLog,v 1.439 2006/12/11 03:08:29 flameeyes Exp $
 
   10 Dec 2006; Luca Barbato <lu_zero@gentoo.org> mplayer-1.0_rc1.ebuild:
   Fix faac dep
+
+  11 Dec 2006; Diego Pettenò <flameeyes@gentoo.org> mplayer-1.0_rc1.ebuild:
+  Tell the configure script to sue the correct CC/BUILD_CC compiler, close bug
+  #155515, thanks to Timothy Redaelli for reporting.
 
   01 Dec 2006; Steve Dibb <beandog@gentoo.org> mplayer-1.0_rc1.ebuild:
   Disable pvr support
